Comentário de exemplo

--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,7 @@
     <p> Nesta etapa preecha seus dados</p>
     <form method="get">
         
-    <labe>Nome
+    <labe for="nome">Nome
       <input type="text" name="nome">    
     </labe>    
     <label>Tipo sanguinio 
