Atualizando HTML com a tela doar e receber, foi realizado alguns ajustes nas demais telas e no css

--- a/cidade.html
+++ b/cidade.html
@@ -8,11 +8,11 @@
 	<link href="main.css" rel="stylesheet">
 </head>
 <body>
-    <h2>3ª etapa - Selecione sua Cidade</h2>
+    <h2>2ª etapa - Selecione sua Cidade</h2>
     <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais proximos para sua doação</p>
     <form method="get">
     <label>Cidade
-     	<select name="cidade" id="cidadezinha">
+     	<select name="cidade" id="cidade">
 		<option>Selecione</option>
 		</select>
 	</label>
