--- a/receber.html
+++ b/receber.html
@@ -8,8 +8,9 @@
 	<link href="main.css" rel="stylesheet">
 </head>
 <body>
-    <h2>1ª etapa - Dados pessoais</h2>
-    <p> Nesta etapa preecha seus dados</p>
+    <h2>Preecha seus dados</h2>
+    <p> Seu cadastro será direcionado para a lista do doador</p>
+    <p> Compartilhe a lista com seus amigos, boa sorte</p>
     <form method="get">
         
     <labe for="nome">Nome
@@ -21,9 +22,9 @@
 		</select>
 	</label>
 	<br>
-	
-	<a href="home.html"><input type="button" id="btn" value="Anterior"></a>
-	<a href="estado.html"><input type="button" id="btn" value="Próximo"></a>
+    <button type="button" id="botaook">Cadastrar</button>
+	<br>
+	<a href="escolha.html"><input type="button" id="btn" value="Anterior"></a>
 	</form>
 	</div>
 <body>
