Correções no html, adicionei o css na pasta, adicionei JQuery e altetei o .js

--- a/cidade.html
+++ b/cidade.html
@@ -3,24 +3,27 @@
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
-	<div class="centro">
-	<h1 id="titulo">DOE SANGUE</h1>
-	<link href="main.css" rel="stylesheet">
+
+	<link href="css/main.css" rel="stylesheet">
+	<script src="js/doevida.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-    <h2>2ª etapa - Selecione sua Cidade</h2>
-    <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais proximos para sua doação</p>
-    <form method="get">
-    <label>Cidade
-     	<select name="cidade" id="cidade">
-		<option>Selecione</option>
-		</select>
-	</label>
-	<br>
-	
-	<a href="estado.html"><input type="button" id="btn" value="Anterior"></a>
-	<a href="hemonucleo.html"><input type="button" id="btn" value="Próximo"></a>
-	</form>
+	<div class="centro">
+		<h1 id="titulo">DOE SANGUE</h1>
+	    <h2>2ª etapa - Selecione sua Cidade</h2>
+	    <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais proximos para sua doação</p>
+	    <form method="get">
+		    <label>Cidade
+		     	<select name="cidade" id="cidade">
+				<option>Selecione</option>
+				</select>
+			</label>
+			<br>
+			
+			<a href="estado.html"><input type="button" id="btn" value="Anterior"></a>
+			<a href="hemonucleo.html"><input type="button" id="btn" value="Próximo"></a>
+		</form>
 	</div>
 <body>
 </html>
