--- a/escolha.html
+++ b/escolha.html
@@ -3,24 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
-	<div class="centro">
-	<h1 id="titulo">DOE SANGUE</h1>
-	<link href="main.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<script src="js/doevida.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-    <h2>4ª etapa - Escolha</h2>
-    <p> Nessa etapa escolha se deseja doar ou receber</p>
-    <form method="get">
-        
-    <a href="doar.html"><input type="button" id="botao" value="   Doar   "></a>
-    <br>
-    <a href="receber.html"><input type="button" id="botao" value="Receber"></a>
-    
-	<br>
-	
-	<a href="hemonucleo.html"><input type="button" id="btn" value="Anterior"></a>
-	
-	</form>
+	<div class="centro">
+		<h1 id="titulo">DOE SANGUE</h1>
+	    <h2>4ª etapa - Escolha</h2>
+	    <p> Nessa etapa escolha se deseja doar ou receber</p>
+	    <form method="get">
+		    <a href="doar.html"><input type="button" id="botao" value="   Doar   "></a>
+		    <br>
+		    <a href="receber.html"><input type="button" id="botao" value="Receber"></a>
+			<br>
+			<a href="hemonucleo.html"><input type="button" id="btn" value="Anterior"></a>
+		</form>
 	</div>
 <body>
 </html>
