--- a/home.html
+++ b/home.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
-	<div class="centro">
-	<h1 id="titulo">DOE SANGUE</h1>
-	<link href="main.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<script src="js/doevida.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
     <h2>Seja bem vindo(a)</h2>
@@ -14,8 +14,6 @@
     <img src="img/doador.png" alt="seja um doador"></img>
     <p>Seja um doador e alimente esse ciclo de colaboração !</p>
      
-     <a href="estado.html"><input type="button" id="btn" value="Siga as etapas"></a>
-
-</div>
+    <a href="estado.html"><input type="button" id="btn" value="Siga as etapas"></a>
 <body>
 </html>
