--- a/receber.html
+++ b/receber.html
@@ -3,29 +3,30 @@
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
-	<div class="centro">
-	<h1 id="titulo">DOE SANGUE</h1>
-	<link href="main.css" rel="stylesheet">
+	<link href="css/main.css" rel="stylesheet">
+	<script src="js/doevida.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-    <h2>Preecha seus dados</h2>
-    <p> Seu cadastro será direcionado para a lista do doador</p>
-    <p> Compartilhe a lista com seus amigos, boa sorte</p>
-    <form method="get">
-        
-    <labe for="nome">Nome
-      <input type="text" name="nome">    
-    </labe>    
-    <label>Tipo sanguinio 
-     	<select name="sangue" id="sangue">
-		<option>Selecione</option>
-		</select>
-	</label>
-	<br>
-    <button type="button" id="botaook">Cadastrar</button>
-	<br>
-	<a href="escolha.html"><input type="button" id="btn" value="Anterior"></a>
-	</form>
+	<div class="centro">
+		<h1 id="titulo">DOE SANGUE</h1>	
+	    <h2>Preecha seus dados</h2>
+	    <p> Seu cadastro será direcionado para a lista do doador</p>
+	    <p> Compartilhe a lista com seus amigos, boa sorte</p>
+	    <form method="get">
+		    <labe for="nome">Nome
+		      <input type="text" name="nome">    
+		    </labe>    
+		    <label>Tipo sanguinio 
+		     	<select name="sangue" id="sangue">
+				<option>Selecione</option>
+				</select>
+			</label>
+			<br>
+		    <button type="button" id="botaook">Cadastrar</button>
+			<br>
+			<a href="escolha.html"><input type="button" id="btn" value="Anterior"></a>
+		</form>
 	</div>
 <body>
 </html>
