Alteração do js para tela cidade, alteração css

--- a/receber.html
+++ b/receber.html
@@ -8,7 +8,7 @@
 	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
-	<div class="centro">
+	<div id="container">
 		<h1 id="titulo">DOE SANGUE</h1>	
 	    <h2>Preecha seus dados</h2>
 	    <p> Seu cadastro será direcionado para a lista do doador</p>
