--- a/estado.html
+++ b/estado.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    	<meta charset="utf-8">
-    	<title> DOE SANGUE </title>
-        <link href="css/main.css" rel="stylesheet">
-    	<script src="js/doevida.js"></script>
-    	<script src="js/jquery-3.2.1.min.js"></script>
-    </head>
-    <body onload="criar()">
-        <div id="container">
-            <header>   
-                <h1 id="titulo">DOE SANGUE</h1>
-                <p> Nesta etapa selecione o Estado em que você mora, para que possamos filtrar os melhores resultados</p>
-            </header>
-    <h2>Instruções</h2>
+<head>
+	<meta charset="utf-8">
+	<title> DOE SANGUE </title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/sweetalert.css">
+	<script src="js/doevida.js"></script>
+	<script src="js/jquery-3.2.1.min.js"></script>
+	<script src="js/sweetalert.min.js"></script>
+	
+</head>
+<body onload="criarEstado()">
+    <div id="container">
+        <header>   
+            <h1 id="titulo">DOE SANGUE</h1>
+            <p> Nesta etapa selecione o Estado em que você mora, para que possamos filtrar os melhores resultados</p>
+        </header>
+        <h2>Instruções<h2>
         <section class="instrucao">
             <ol>
                 <li>Selecione seu estado</li>
@@ -21,13 +24,16 @@
                 <li>Selecione um hemonucleo</li>
             </ol>
         </section>
-    <section class="escolha">
-        <form method="get" id="formulario">
-        	<a href="home.html"><input type="button" id="btn" value="Anterior"></a>
-        	<a href="cidade.html"><input type="button" id="btn" value="Próximo"></a>
-    	</form>
-    </section>
-</div>
-    </body>
+        <section class="escolha" id="escolha">
+            <form id="formEstado">
+                <label for="estado">Estado: </label>
+                <select name="estado" id="appEstado">
+                    <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
+                </select>
+            </form>
+        	<button id="btn-anterior" onclick="location.href='home.html'">Anterior</button></a>
+            <button id="btn-proximo" onclick="validarEstado()">Próximo</button>    
+        </section>
+    </div>
+</body>
 </html>    
-    
