Pequenas alterações na CSS e HTML, iniciando js da pagina doar.html

--- a/cidade.html
+++ b/cidade.html
@@ -16,18 +16,18 @@
 		    <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais proximos para sua doação</p>
 	    </header>
 	    	<h2>Instruções</h2>
-		<section class="instrucao">
-		        <ol>
-		            <li>Selecione seu estado</li>
-		            <li>Selecione sua cidade</li>
-		            <li>Selecione um hemonucleo</li>
-		        </ol>
-		</section>
+	<section class="instrucao">
+            <ol>
+                <li>Selecione seu estado</li>
+                <li>Selecione sua cidade</li>
+                <li>Selecione um hemonucleo</li>
+            </ol>
+        </section>
 		<section class="escolha">
 		    <form method="get" id="formulario">
 			   
-				<a href="estado.html"><input type="button" id="btn" value="Anterior"></a>
-				<a href="hemonucleo.html"><input type="button" id="btn" value="Próximo"  ></a>
+				<a href="estado.html"><input type="button" class="btn" value="Anterior"></a>
+				<a href="hemonucleo.html"><input type="button" class="btn" value="Próximo"  ></a>
 						
 			</form>
 		</section>
@@ -35,5 +35,5 @@
 		<button onclick="criarTabelaHemonucleo()">Criar Tabela</button>
 	</div>
 	
-<body>
+</body>
 </html>
