--- a/escolha.html
+++ b/escolha.html
@@ -17,8 +17,8 @@
 		    <br>
 		    <a href="receber.html"><input type="button" id="botao" value="Receber"></a>
 			<br>
-			<a href="hemonucleo.html"><input type="button" id="btn" value="Anterior"></a>
+			<a href="hemonucleo.html"><input type="button" class="btn" value="Anterior"></a>
 		</form>
 	</div>
-<body>
+</body>
 </html>
