--- a/estado.html
+++ b/estado.html
@@ -31,8 +31,8 @@
                     <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
                 </select>
             </form>
-        	<button id="btn-anterior" onclick="location.href='home.html'">Anterior</button></a>
-            <button id="btn-proximo" onclick="validarEstado()">Próximo</button>    
+        	<button class="btn" onclick="location.href='home.html'">Anterior</button></a>
+            <button class="btn" onclick="validarEstado()">Próximo</button>    
         </section>
     </div>
 </body>
