--- a/hemonucleo.html
+++ b/hemonucleo.html
@@ -32,7 +32,9 @@
 		            </tbody>
 		    	</table>
 		   </form>
+		    <button class="btn" onclick="location.href='cidade.html'">Anterior</button>
+            <button class="btn" onclick="location.href='escolha.html'">Próximo</button>    
 		</section>
 	</div>
-<body>
+</body>
 </html>
