--- a/receber.html
+++ b/receber.html
@@ -25,8 +25,8 @@
 			<br>
 		    <button type="button" id="botaook">Cadastrar</button>
 			<br>
-			<a href="escolha.html"><input type="button" id="btn" value="Anterior"></a>
+			<a href="escolha.html"><input type="button" class="btn" value="Anterior"></a>
 		</form>
 	</div>
-<body>
+</body>
 </html>
