Corrigido o botão que conecta ao banco

--- a/cidade.html
+++ b/cidade.html
@@ -34,7 +34,10 @@
             </form>
         	<button class="btn" onclick="location.href='estado.html'">Anterior</button></a>
             <button class="btn" onclick="validarCidade()">Próximo</button>    
-        </section>		
+        </section>
+        
+                    <button onclick="criarTabelaHemonucleo()">Próximo</button>    
+
 	</div>
 </body>
 </html>
