Adicinei a validação da cidade no botão que carrega o bd e corrigi a chamamda do sweetAlert

--- a/cidade.html
+++ b/cidade.html
@@ -7,7 +7,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/sweetalert.css">
 	<script src="js/doevida.js"></script>
-	<script src="js/sweetalert.js"></script>
+	<script src="js/sweetalert.min.js"></script>
 	<script src="js/bd.js"></script>
 	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
@@ -33,11 +33,8 @@
                 </select>
             </form>
         	<button class="btn" onclick="location.href='estado.html'">Anterior</button></a>
-            <button class="btn" onclick="validarCidade()">Próximo</button>    
+            <button class="btn" onclick="criarTabelaHemonucleo()">Próximo</button>    
         </section>
-        
-                    <button onclick="criarTabelaHemonucleo()">Próximo</button>    
-
 	</div>
 </body>
 </html>
