Atualizei as funções para addEventListener

--- a/cidade.html
+++ b/cidade.html
@@ -11,7 +11,7 @@
 	<script src="js/bd.js"></script>
 	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
-<body onload="criarCidade()">
+<body>
 	<div id="container">
 		 <header>   
 	        <h1 id="titulo">DOE SANGUE</h1>
