--- a/cidade.html
+++ b/cidade.html
@@ -3,12 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
-
 	<link href="css/main.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/sweetalert.css">
+	<link href="css/sweetalert.css" rel="stylesheet">
 	<script src="js/doevida.js"></script>
 	<script src="js/sweetalert.min.js"></script>
-	<script src="js/bd.js"></script>
 	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
 <body>
@@ -32,8 +30,8 @@
                     <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
                 </select>
             </form>
-        	<button class="btn" onclick="location.href='estado.html'">Anterior</button></a>
-            <button class="btn" onclick="criarTabelaHemonucleo()">Próximo</button>    
+        	<button class="btn" id="btnAnteriorCidade">Anterior</button></a>
+            <button class="btn" id="btnProximoCidade">Próximo</button>    
         </section>
 	</div>
 </body>
