--- a/cidade.html
+++ b/cidade.html
@@ -6,6 +6,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<link href="css/sweetalert.css" rel="stylesheet">
 	<script src="js/doevida.js"></script>
+	<script src="js/bd.js"></script>
 	<script src="js/sweetalert.min.js"></script>
 	<script src="js/jquery-3.2.1.min.js"></script>
 </head>
