--- a/opcao.html
+++ b/opcao.html
@@ -6,6 +6,7 @@
 	<link href="css/main.css" rel="stylesheet">
 	<script src="js/banco.js"></script>
 	<script src="js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.mask.min.js"></script>
     <script src="js/jquery.js"></script>
 </head>
 <body>
@@ -18,7 +19,7 @@
         <div id="conteudo1"> <!--display none, só aparece se clicar no botao a cima -->
             <p class="texto">Veja a lista de pacientes cadastrados, escolha um que seja compatível, se preferir pesquise pelo CPF de quem você deseja doar </p>
             <form name="form2">
-                Busca: <input type="number" name="id"/><br>
+                Busca: <input type="text" class="cpf" name="id"/><br>
             </form>
             <button class="confirma" onclick="buscar()">Buscar</button>
                 	    <!--Opção buscar paciente-->
@@ -37,13 +38,13 @@
             <p>Após efetuar seu cadastro, seus dados serão disponibilizados na tela do doador</p>
             <p>Compartilhe com seus amigos, você poderá ser pesquisado pelo CPF </p>
             <form name="form1">
-                CPF: <input type="number" name="id" required /> <br>
+                CPF: <input type="text" class="cpf" name="id" required /> <br>
                 Nome: <input type="text" name="name" required/><br>
                 Sobrenome: <input type="text" name="last" required /><br>
                 Hemonucleo: <input type="text" name="hemonucleo" required/><br>
                 Tipo sanguinio: <input type="text" name="tipo" size="3" required /><br>
             </form>
-            <button class="confirma" onclick="inserirRegistro()">OK</button>
+            <button class="confirma" onclick="inserirRegistro()">Cadastrar</button>
     	    <br>
         </div>
         <br>
