inserido jquery que ao clicar no botão faz sumir o conteudo

--- a/opcao.html
+++ b/opcao.html
@@ -44,7 +44,7 @@
                 Hemonucleo: <input type="text" name="hemonucleo" required/><br>
                 Tipo sanguinio: <input type="text" name="tipo" size="3" required /><br>
             </form>
-            <button class="confirma" onclick="inserirRegistro()">Cadastrar</button>
+           <button class="confirma" id="botaoreceber" onclick="inserirRegistro()">OK</button>
     	    <br>
         </div>
         <br>
