detalhes de css

--- a/estado.html
+++ b/estado.html
@@ -16,7 +16,7 @@
             <h1 id="titulo">DOE SANGUE</h1>
             <p> Nesta etapa selecione o Estado em que você mora, para que possamos filtrar os melhores resultados</p>
         </header>
-        <h2>Instruções<h2>
+        <h2>Instruções</h2>
         <section class="instrucao">
             <ol>
                 <li>Selecione seu estado</li>
