Correção de erros de digitação

--- a/cidade.html
+++ b/cidade.html
@@ -14,14 +14,14 @@
 	<div id="container">
 		 <header>   
 	        <h1 id="titulo">DOE SANGUE</h1>
-		    <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais proximos para sua doação</p>
+		    <p> Nesta etapa selecione a cidade em que você mora, assim mostraremos os hospitais mais próximos para sua doação</p>
 	    </header>
 	   	<h2>Instruções</h2>
 		<section class="instrucao">
         	<ol>
         		<li>Selecione seu estado</li>
             	<li>Selecione sua cidade</li>
-            	<li>Selecione um hemonucleo</li>
+            	<li>Selecione um hemonúcleo</li>
         	</ol>
     	</section>
 		<section class="escolha" id="escolha">
