--- a/estado.html
+++ b/estado.html
@@ -21,7 +21,7 @@
             <ol>
                 <li>Selecione seu estado</li>
                 <li>Selecione sua cidade</li>
-                <li>Selecione um hemonucleo</li>
+                <li>Selecione um hemonúcleo</li>
             </ol>
         </section>
         <section class="escolha" id="escolha">
