--- a/hemonucleo.html
+++ b/hemonucleo.html
@@ -11,13 +11,13 @@
 	<div id="container">
 		<header>
 			<h1 id="titulo">DOE SANGUE</h1>
-		    <p> Nesta etapa disponibilizamos os hemonúcleos mais proximos da onde você mora, selecione um para a próxima etapa </p>
+		    <p> Nesta etapa disponibilizamos os hemonúcleos mais próximos da onde você mora, selecione um para a próxima etapa </p>
 	    </header>
 	    <section class="instrucao">
 		        <ol>
 		            <li>Selecione seu estado</li>
 		            <li>Selecione sua cidade</li>
-		            <li>Selecione um hemonucleo</li>
+		            <li>Selecione um hemonúcleo</li>
 		        </ol>
 		</section>
 	    <section section class="escolha">
