Alterado para acessibilidade

--- a/cidade.html
+++ b/cidade.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt/br">
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
@@ -26,10 +26,11 @@
     	</section>
 		<section class="escolha" id="escolha">
             <form id="formCidade">
-                <label for="cidade">Cidade: </label>
-                <select name="cidade" id="appCidade">
-                    <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
-                </select>
+                <label for="cidade">Cidade:
+		            <select name="cidade" id="appCidade">
+		                <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
+		            </select>
+				</label>
             </form>
         	<button class="btn" id="btnAnteriorCidade">Anterior</button></a>
             <button class="btn" id="btnProximoCidade">Próximo</button>    
