--- a/estado.html
+++ b/estado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt/br">
 <head>
 	<meta charset="utf-8">
 	<title> DOE SANGUE </title>
@@ -26,10 +26,11 @@
         </section>
         <section class="escolha" id="escolha">
             <form id="formEstado">
-                <label for="estado">Estado: </label>
-                <select name="estado" id="appEstado">
-                    <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
-                </select>
+                <label for="estado">Estado: 
+                    <select name="estado" id="appEstado">
+                        <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
+                    </select>
+                </label>
             </form>
         	<button class="btn" id="btnAnteriorEstado">Anterior</button></a>
             <button class="btn" id="btnProximoEstado">Próximo</button>    
