--- a/cidade.html
+++ b/cidade.html
@@ -26,11 +26,11 @@
     	</section>
 		<section class="escolha" id="escolha">
             <form id="formCidade">
-                <label for="cidade">Cidade:
+                <label for="cidade">Cidade:</label>
 		            <select name="cidade" id="appCidade">
 		                <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
 		            </select>
-				</label>
+				
             </form>
         	<button class="btn" id="btnAnteriorCidade">Anterior</button></a>
             <button class="btn" id="btnProximoCidade">Próximo</button>    
