--- a/estado.html
+++ b/estado.html
@@ -25,12 +25,12 @@
             </ol>
         </section>
         <section class="escolha" id="escolha">
-            <form id="formEstado">
+            <form id="formEstado"></label>
                 <label for="estado">Estado: 
                     <select name="estado" id="appEstado">
                         <option name="Selecione" value="Selecionado" id="padrao">Selecione</option>
                     </select>
-                </label>
+                
             </form>
         	<button class="btn" id="btnAnteriorEstado">Anterior</button></a>
             <button class="btn" id="btnProximoEstado">Próximo</button>    
