--- a/opcao.html
+++ b/opcao.html
@@ -19,7 +19,8 @@
         <div id="conteudo1"> <!--display none, só aparece se clicar no botao a cima -->
             <p class="texto">Veja a lista de pacientes cadastrados, escolha um que seja compatível, se preferir pesquise pelo CPF de quem você deseja doar </p>
             <form method="post" action="form.php" id="formulario" name="name">
-                Busca: <input type="text" class="cpf" name="id"/><br>
+               <label for"cpf"> Busca:</label>
+                   <input type="text" class="cpf" name="id"/><br>
             </form>
             <button class="confirma" onclick="buscar()">Buscar</button>
                 	    <!--Opção buscar paciente-->
